# BattleShip-P2P

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build.ps1  build.sh  config.yml
.cursor/rules/: battleship-net-codebase-policy.mdc
.github/workflows/: release.yml
assets/: icon.icns
cmake/: Ssb64NetmenuSources.cmake
debug_tools/adpcm_diff/: adpcm_offline_decode.py
debug_tools/gbi_diff/: gbi_diff.py
debug_tools/m64p_audio_dump_plugin/: CMakeLists.txt
debug_tools/m64p_trace_plugin/: CMakeLists.txt  gfx_trace_plugin.c  m64p_plugin_api.h  rsp_trace_plugin.c
debug_tools/sprite_deswizzle/: sprite_deswizzle.py
docs/: BUILDING.md  architecture.md  audio_buildout_2026-04-24.md  battle_item_platform_clipping_2026-04-19.md  boss_endgame_segfault_handoff_2026-05-01.md  build_and_tooling.md  c_conventions.md  cmake_warning_audit_2026-04-20.md  cmake_warning_audit_handoff_2026-04-20.md  css_panel_garble_investigation_2026-04-29.md  css_selected_anim_vfx_sfx_investigation_2026-04-29.md  debug_gbi_trace.md  fighter_intro_animation_handoff_2026-04-13.md  fighter_render_investigation.md  foot_slope_misalignment_investigation_2026-04-29.md  freeze_frame_rcp_clock_design_2026-04-26.md  itattributes_rom_layout_handoff.md  mario_fireball_passthrough_2026-04-19.md  mario_special_side_segfault_2026-04-19.md  netcode_agent_rules.md  netplay_architecture.md  netplay_frame_phase_audit.md  netplay_matchmaking_debug.md  plan-token-pointer-system.md  smash_title_32bpp_sprite.md  sprite_broken_textures_handoff_2026-04-19.md  sprite_trailing_column_bleed.md  windows_build_script_failure_modes_2026-04-29.md
docs/bugs/: README.md  audio_bridge_bank_swap_2026-04-24.md  audio_fgm_unk_flat_parse_2026-04-30.md  boss_event32_cache_invalidation_2026-05-01.md  btt_result_screen_state_leak_2026-04-30.md  bzero_recursion_arm64_2026-04-11.md  css_gate_palette_overlap_fixup_2026-04-29.md  css_winpose_script_null_addend_2026-04-29.md  display_list_widening_2026-04-06.md  fighter_slope_contour_lp64_alias_2026-04-29.md  fighter_tile_masks_wrap_2026-04-11.md  fog_alpha_source_mux_2026-05-01.md  fttexturepart_container_byteswap_2026-04-30.md  ia4_upload_unclamped_to_tile_2026-04-29.md  itattributes_rom_layout_rewrite_2026-04-24.md  item_arrow_gobj_implicit_int_2026-04-20.md  loadtile_fixup_last_row_right_edge_2026-04-22.md  mpvertex_byte_swap_2026-04-11.md  particle_bank_dma_2026-04-08.md  samus_charge_shot_hit_detection_2026-04-13.md  sector_arwing_interp_desc_byteswap_2026-04-28.md  spline_interp_block_halfswap_2026-04-25.md  sprite_decode_stride_mismatch_2026-04-20.md  sprite_texel_tmem_swizzle_2026-04-10.md  training_mode_sprite_init_pre_fixup_2026-04-29.md  whispy_canopy_metal_fallback_texture_2026-04-25.md  wpattributes_bitfield_padding_2026-04-20.md
include/: config.h  reloc_data.h  stdarg.h
include/PR/: abi.h  os.h
port/: CMakeLists.txt  LICENSE  app_paths.cpp  app_paths.h  config.yml  coroutine_posix.cpp  coroutine_win32.cpp  first_run.cpp  first_run.h  gameloop.cpp  gameloop.h  mm_bootstrap.c  mm_bootstrap.cpp  mm_bootstrap.h  native_dialog.cpp  os.cpp  port.cpp  port_aobj_fixup.cpp  port_aobj_fixup.h  port_log.c  port_log.h  port_save.cpp  port_save.h  port_watchdog.cpp  ssb64.rc  ssb64_paths_capi.h
port/audio/: audio_playback.cpp  audio_playback.h  mixer.c  mixer.h
port/bridge/: audio_bridge.cpp  audio_bridge.h  framebuffer_capture.cpp  lbreloc_bridge.cpp  lbreloc_byteswap.cpp  lbreloc_byteswap.h
port/cmake/: Findtinyxml2.cmake
port/debug_tools/m64p_trace_plugin/: CMakeLists.txt  build.ps1  rsp_trace_plugin.c
port/docs/: audit_bitfield_positional_init_2026-04-28.md  audit_fast3d_gaps_2026-04-28.md  audit_lp64_stride_2026-04-28.md  audit_per_character_bonus_stages_2026-04-29.md  audit_port_glue_2026-04-28.md  audit_release_pass_2026-04-28.md  audit_u8_u16_struct_fields_2026-04-28.md  build_and_tooling.md  css_selected_anim_vfx_sfx_investigation_2026-04-29.md  debug_ido_bitfield_layout.md  dk_intro_wallpaper_mushroom_kingdom_2026-04-26.md  fighter_intro_animation_investigation.md  intro_explosion_alpha_cutout_handoff_2026-04-25.md  intro_residuals_2026-04-25.md  linux_appimage_failure_modes_2026-04-29.md  n64_reference.md  netplay_architecture.md  netplay_matchmaking.md  netplay_menus.md  plan-token-pointer-system.md  samus_charge_shot_hit_detection_handoff_2026-04-13.md  smash_title_32bpp_sprite.md  sprite_trailing_column_bleed.md  stage_rendering_investigation_2026-04-22.md  struct_audit_anim_events_2026-04-24.md  struct_audit_ftattributes_2026-04-24.md  struct_audit_it_wp_attacks_2026-04-24.md  struct_audit_stages_2026-04-24.md  struct_rom_layout_audit_handoff_2026-04-24.md  whispy_canopy_metal_only_2026-04-25.md
port/enhancements/: enhancements.cpp  enhancements.h
port/gui/: Compat.h  Menu.cpp  MenuBar.cpp  MenuBar.h  PortMenu.cpp  PortMenu.h  UIWidgets.cpp  UIWidgets.hpp
port/net/: mn_vs_submenu_png.c  mn_vs_submenu_png.h  netsync.c  stdlib.h  string.h  taskman.h
port/resource/: RelocFile.cpp  RelocFile.h  RelocFileFactory.cpp  RelocFileFactory.h  RelocPointerTable.cpp  RelocPointerTable.h  ResourceType.h
port/stubs/: audio_stubs.c  debug_stubs.c  libc_compat.c  n64_stubs.c  port_diag_stubs.c  segment_symbols.c
scripts/: mm_smoke_two_clients.sh  new-worktree.sh  package-linux.sh  package-macos.sh  package-windows.ps1
src/db/: dbbattle.c  dbcube.c
src/ef/: efdisplay.c  efground.c  efmanager.c  efparticle.c
src/ft/: ftanim.c  ftdata.c  ftdisplaymain.c  ftmain.c  ftmanager.c  ftparam.c  ftparam.h  ftphysics.c  ftshadow.c  fttypes.h
src/gm/: gmcommon.c  gmdef.h  gmscript.h  gmtypes.h
src/gr/: grwallpaper.c
src/if/: ifcommon.c
src/it/: item.h  itmain.c  itmanager.c  ittypes.h
src/lb/: lbcommon.c  lbreloc.h  lbtransition.c
src/mp/: mpcollision.c  mpcommon.c
src/mv/: mvunknownmario.c
src/sc/: scmanager.c
src/sys/: audio.c  audio.h  controller.c  dma.c  interp.c  interp.h  netinput.c  netinput.h  (+13 more)
tools/: creditsTextConverter.py  generate_reloc_stubs.py  generate_yamls.py  reloc_data_symbols.us.txt  save_editor.py
(+276 files in other folders)
